# SDL_FRAMEWORK

./: CMakeLists.txt  README.md
game/: enemy.cpp  enemy.h  main.cpp  main.h  particle.cpp  particle.h  particleemitter.cpp  particleemitter.h  spaceship.h
hugworks/: camera.cpp  color.cpp  color.h  enemy.h  entity.cpp  entity.h  image.cpp  image.h  input.cpp  input.h  main.cpp  main.h  renderer.cpp  renderer.h  scene.cpp  scene.h  vector2.cpp  vector2.h
